test/error/LexUtf8NoContinuation2.ci
Â-  //ERROR: Invalid UTF-8 //ERROR: Invalid character
